# sm0l-tools-mcp-project_v3

./: README.md  pyproject.toml  setup.cfg
sm0l_tools_mcp/: __init__.py  install_hints.py  manifest_loader.py  mcp_server.py  toolchains.py
sm0l_tools_mcp/data/: extras_map.json  sm0l_tools_manifest.json
